# discord-api

./: .gitignore  Cargo.toml  README.md  c.json  g.json  guild.json  guild_raw.json  test.txt
.github/workflows/: rust.yml
examples/: interaction.rs  manager_ping.rs  ping.rs  rest.rs  simple.rs
src/: client.rs  error.rs  event.rs  lib.rs  main.rs  manager.rs  proto.rs  snowflake.rs  traits.rs  wrapper.rs
src/api/: mod.rs
src/cache/: mod.rs
src/gateway/: mod.rs  shard.rs  socket.rs
src/model/: activity.rs  channel.rs  embed.rs  emoji.rs  id.rs  integration.rs  interaction.rs  message.rs  mod.rs  presence.rs  thread.rs  user.rs  voice.rs
src/model/channel/: mod.rs  raw.rs
src/model/gateway/: command.rs  dispatch.rs  event.rs  intents.rs  mod.rs  opcode.rs
src/model/guild/: guild.rs  member.rs  mod.rs  permission.rs  role.rs  scheduled_event.rs
src/proto/: config.rs  mod.rs
src/rest/: client.rs  gateway.rs  mod.rs  ratelimit.rs  routes.rs
src/rest/message/: create_message.rs  create_reaction.rs  mod.rs
src/rest/user/: create_dm.rs  get_current_user.rs  get_current_user_guilds.rs  mod.rs
src/util/: mod.rs  resource.rs  wrapper.rs
