[package]
authors = ["Dan Lionis <lionis.dan@gmail.com>"]
edition = "2018"
name = "discord"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "2.2"
http = "0.2"
serde_repr = "0.1"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
lru = { version = "0.7.0", optional = true }
dashmap = { version = "3.11", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.13", features = ["tls"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.9"
serde_test = "1.0"

[features]
default = ["json"]
manager = ["rest", "tokio", "tokio-tungstenite", "futures", "json"]
full = ["cache", "reqwest", "json", "manager"]
json = ["serde_json"]
cache = ["dashmap", "lru"]
rest = ["reqwest"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "ping"
required-features = ["manager"]

[[example]]
name = "manager_ping"
required-features = ["manager"]

[[example]]
name = "rest"
required-features = ["rest"]
