[package]
authors = ["Dan Lionis <lionis.dan@gmail.com>"]
edition = "2018"
name = "discord"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_repr = "0.1"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.13", features = ["tls"], optional = true }
futures = { version = "0.3", optional = true }
twilight-model = "0.11"
twilight-http = { version = "0.11", optional = true }
twilight-util = { version = "0.11", optional = true, features = ["builder"] }

[dev-dependencies]
env_logger = "0.9"
serde_test = "1.0"

[features]
default = ["json"]
manager = ["rest", "tokio", "tokio-tungstenite", "futures", "json"]
full = ["rest", "json", "manager"]
json = ["serde_json"]
rest = ["twilight-http"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "ping"
required-features = ["manager"]

[[example]]
name = "manager_ping"
required-features = ["manager"]

[[example]]
name = "interaction"
required-features = ["manager", "twilight-util"]
